# uberlog

./: Cargo.toml  GUI.excalidraw  LICENSE  README.md  deny.toml
.github/workflows/: release.yaml
docs/: log_example
src/: command_parser.rs  commander.rs  configuration.rs  layout_section.rs  lib.rs  main.rs
src/commander/: file_io.rs  filter_handler.rs  mod.rs  source_handler.rs  user_commands.rs
src/gui/: central_panel.rs  gui.rs  lateral_panel.rs  mod.rs  top_bar.rs
src/log_source/: file_source.rs  log_source.rs  mod.rs  rtt_source.rs  stdin_source.rs  uart_source.rs
src/tui/: mod.rs  section_filters.rs  section_logs.rs  section_probe.rs  section_sources.rs
